Remove `Class.newInstance()`
Use `Class.getDeclaredConstructor().newInstance()` instead.