@@ -251,7 +251,7 @@ public class Loader implements LibraryLoader {
 		// instantiate library
 		Library ret;
 		try {
-			ret = (Library) retClass.newInstance();
+			ret = (Library) retClass.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new LoadFailedException(StringUtil.format(
 					Strings.get("jarLibraryNotCreatedError"), className));
